   Add a menu item to 'Tools->Configuration files' for the toolbar UI
   definition.
 * src/Makefile.am, wscript:
   Install toolbar.h.
 * src/ui_utils.c:
   Fix broken recent files menus.
 * glade.geany, src/callbacks.c, src/callbacks.h, src/interface.c,
   src/keybindings.c:
   Remove on_go_to_line1_activate() and directly use
   on_go_to_line_activate() instead.


2008-12-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/sciwrappers.c, src/sciwrappers.h,
   src/callbacks.c, src/plugins.c, src/editor.c,
   plugins/geanyfunctions.h:
   Rename sci_cmd() to sci_send_command() to match the plugin API and
   fix the generated macro name.
 * src/plugindata.h, src/plugins.c:
   Add GeanyFunctions::p_msgwin to fix the prefix for generated macros.
   Deprecate GeanyFunctions::p_msgwindow.
 * plugins/saveactions.c:
   Fix use of filetypes_array.
 * src/build.c, src/plugindata.h, src/msgwindow.c, src/msgwindow.h,
   src/search.c, src/plugins.c, plugins/geanyfunctions.h:
   Rename msgwin_compiler_add -> msgwin_compiler_add_string.
   Rename msgwin_msg_add -> msgwin_msg_add_string.
   Rename msgwin_compiler_add_fmt -> msgwin_compiler_add.
   Rename msgwin_msg_add_fmt -> msgwin_msg_add.
   This fixes 2 geanyfunctions.h macros, and is more consistent with
   msgwin_status_add().


2008-12-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/support.c, src/support.h:
   Removed unused code.
 * src/main.c, src/document.c, src/symbols.c:
   Don't mark console messages as translatable.
   Add two comments for translators.
 * plugins/genapi.py:
   Beautify the header comments of the generated API file.
   Add command line option to suppress status output.
 * THANKS, geany.glade, src/about.c, src/editor.c, src/editor.h,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c:
   Add auto-closing of braces, brackets and quotes
   (patch by Guillaume de Rorthais, thanks).
 * geany.glade, src/interface.c: